// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BatchReport loads a more complex report and autoselects entries 1`] = `
<div
  className="batchReport_3hmsj"
>
  <Toolbar
    handleNavFilter={[Function]}
    report={
      Object {
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "name_type_index": Set {
                      "test_equality_passing|testcase",
                      "AlphaSuite|testsuite",
                      "Primary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "colour": Array [
                        "white",
                      ],
                      "simple": Array [
                        "server",
                      ],
                    },
                    "tags_index": Object {
                      "colour": Array [
                        "white",
                      ],
                      "simple": Array [
                        "server",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                  },
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.510098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.510094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing2",
                    "name_type_index": Set {
                      "test_equality_passing2|testcase",
                      "AlphaSuite|testsuite",
                      "Primary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "failed",
                    "status_override": null,
                    "tags": Object {
                      "simple": Array [
                        "server",
                      ],
                    },
                    "tags_index": Object {
                      "simple": Array [
                        "server",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.632214+00:00",
                        "start": "2018-10-15T14:30:11.510072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "78686a4d-7b94-4ae6-ab50-d9960a7fb714",
                  },
                ],
                "logs": Array [],
                "name": "AlphaSuite",
                "name_type_index": Set {
                  "AlphaSuite|testsuite",
                  "Primary|multitest",
                  "Sample Testplan|testplan",
                  "test_equality_passing|testcase",
                  "test_equality_passing2|testcase",
                },
                "status": "failed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                  ],
                },
                "tags_index": Object {
                  "colour": Array [
                    "white",
                  ],
                  "simple": Array [
                    "server",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
              },
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "name_type_index": Set {
                      "test_equality_passing|testcase",
                      "BetaSuite|testsuite",
                      "Primary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "simple": Array [
                        "server",
                        "client",
                      ],
                    },
                    "tags_index": Object {
                      "simple": Array [
                        "server",
                        "client",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "8865a23d-1823-4c8d-ab37-58d24fc8ac05",
                  },
                ],
                "logs": Array [],
                "name": "BetaSuite",
                "name_type_index": Set {
                  "BetaSuite|testsuite",
                  "Primary|multitest",
                  "Sample Testplan|testplan",
                  "test_equality_passing|testcase",
                },
                "status": "passed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                    "client",
                  ],
                },
                "tags_index": Object {
                  "simple": Array [
                    "server",
                    "client",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "6fc5c008-4d1a-454e-80b6-74bdc9bca49e",
              },
            ],
            "logs": Array [],
            "name": "Primary",
            "name_type_index": Set {
              "Primary|multitest",
              "Sample Testplan|testplan",
              "AlphaSuite|testsuite",
              "test_equality_passing|testcase",
              "test_equality_passing2|testcase",
              "BetaSuite|testsuite",
            },
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "tags_index": Object {
              "colour": Array [
                "white",
              ],
              "simple": Array [
                "server",
                "client",
              ],
            },
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:11.159661+00:00",
                "start": "2018-10-15T14:30:11.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
          },
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:12.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:12.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "name_type_index": Set {
                      "test_equality_passing|testcase",
                      "GammaSuite|testsuite",
                      "Secondary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:12.132214+00:00",
                        "start": "2018-10-15T14:30:12.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "f73bd6ea-d378-437b-a5db-00d9e427f36a",
                  },
                ],
                "logs": Array [],
                "name": "GammaSuite",
                "name_type_index": Set {
                  "GammaSuite|testsuite",
                  "Secondary|multitest",
                  "Sample Testplan|testplan",
                  "test_equality_passing|testcase",
                },
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "tags_index": Object {},
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:12.158224+00:00",
                    "start": "2018-10-15T14:30:12.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "08d4c671-d55d-49d4-96ba-dc654d12be26",
              },
            ],
            "logs": Array [],
            "name": "Secondary",
            "name_type_index": Set {
              "Secondary|multitest",
              "Sample Testplan|testplan",
              "GammaSuite|testsuite",
              "test_equality_passing|testcase",
            },
            "status": "passed",
            "status_override": null,
            "tags": Object {},
            "tags_index": Object {},
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:12.159661+00:00",
                "start": "2018-10-15T14:30:12.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "8c3c7e6b-48e8-40cd-86db-8c8aed2592c8",
          },
        ],
        "meta": Object {},
        "name": "Sample Testplan",
        "name_type_index": Set {
          "Sample Testplan|testplan",
          "Primary|multitest",
          "AlphaSuite|testsuite",
          "test_equality_passing|testcase",
          "test_equality_passing2|testcase",
          "BetaSuite|testsuite",
          "Secondary|multitest",
          "GammaSuite|testsuite",
        },
        "status": "failed",
        "status_override": null,
        "tags_index": Object {
          "colour": Array [
            "white",
          ],
          "simple": Array [
            "server",
            "client",
          ],
        },
        "timer": Object {
          "run": Object {
            "end": "2018-10-15T14:30:11.296158+00:00",
            "start": "2018-10-15T14:30:10.998071+00:00",
          },
        },
        "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
      }
    }
    status="failed"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <Nav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    report={
      Object {
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "name_type_index": Set {
                      "test_equality_passing|testcase",
                      "AlphaSuite|testsuite",
                      "Primary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "colour": Array [
                        "white",
                      ],
                      "simple": Array [
                        "server",
                      ],
                    },
                    "tags_index": Object {
                      "colour": Array [
                        "white",
                      ],
                      "simple": Array [
                        "server",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                  },
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.510098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.510094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing2",
                    "name_type_index": Set {
                      "test_equality_passing2|testcase",
                      "AlphaSuite|testsuite",
                      "Primary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "failed",
                    "status_override": null,
                    "tags": Object {
                      "simple": Array [
                        "server",
                      ],
                    },
                    "tags_index": Object {
                      "simple": Array [
                        "server",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.632214+00:00",
                        "start": "2018-10-15T14:30:11.510072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "78686a4d-7b94-4ae6-ab50-d9960a7fb714",
                  },
                ],
                "logs": Array [],
                "name": "AlphaSuite",
                "name_type_index": Set {
                  "AlphaSuite|testsuite",
                  "Primary|multitest",
                  "Sample Testplan|testplan",
                  "test_equality_passing|testcase",
                  "test_equality_passing2|testcase",
                },
                "status": "failed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                  ],
                },
                "tags_index": Object {
                  "colour": Array [
                    "white",
                  ],
                  "simple": Array [
                    "server",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
              },
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "name_type_index": Set {
                      "test_equality_passing|testcase",
                      "BetaSuite|testsuite",
                      "Primary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "simple": Array [
                        "server",
                        "client",
                      ],
                    },
                    "tags_index": Object {
                      "simple": Array [
                        "server",
                        "client",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "8865a23d-1823-4c8d-ab37-58d24fc8ac05",
                  },
                ],
                "logs": Array [],
                "name": "BetaSuite",
                "name_type_index": Set {
                  "BetaSuite|testsuite",
                  "Primary|multitest",
                  "Sample Testplan|testplan",
                  "test_equality_passing|testcase",
                },
                "status": "passed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                    "client",
                  ],
                },
                "tags_index": Object {
                  "simple": Array [
                    "server",
                    "client",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "6fc5c008-4d1a-454e-80b6-74bdc9bca49e",
              },
            ],
            "logs": Array [],
            "name": "Primary",
            "name_type_index": Set {
              "Primary|multitest",
              "Sample Testplan|testplan",
              "AlphaSuite|testsuite",
              "test_equality_passing|testcase",
              "test_equality_passing2|testcase",
              "BetaSuite|testsuite",
            },
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "tags_index": Object {
              "colour": Array [
                "white",
              ],
              "simple": Array [
                "server",
                "client",
              ],
            },
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:11.159661+00:00",
                "start": "2018-10-15T14:30:11.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
          },
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:12.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:12.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "name_type_index": Set {
                      "test_equality_passing|testcase",
                      "GammaSuite|testsuite",
                      "Secondary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:12.132214+00:00",
                        "start": "2018-10-15T14:30:12.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "f73bd6ea-d378-437b-a5db-00d9e427f36a",
                  },
                ],
                "logs": Array [],
                "name": "GammaSuite",
                "name_type_index": Set {
                  "GammaSuite|testsuite",
                  "Secondary|multitest",
                  "Sample Testplan|testplan",
                  "test_equality_passing|testcase",
                },
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "tags_index": Object {},
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:12.158224+00:00",
                    "start": "2018-10-15T14:30:12.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "08d4c671-d55d-49d4-96ba-dc654d12be26",
              },
            ],
            "logs": Array [],
            "name": "Secondary",
            "name_type_index": Set {
              "Secondary|multitest",
              "Sample Testplan|testplan",
              "GammaSuite|testsuite",
              "test_equality_passing|testcase",
            },
            "status": "passed",
            "status_override": null,
            "tags": Object {},
            "tags_index": Object {},
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:12.159661+00:00",
                "start": "2018-10-15T14:30:12.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "8c3c7e6b-48e8-40cd-86db-8c8aed2592c8",
          },
        ],
        "meta": Object {},
        "name": "Sample Testplan",
        "name_type_index": Set {
          "Sample Testplan|testplan",
          "Primary|multitest",
          "AlphaSuite|testsuite",
          "test_equality_passing|testcase",
          "test_equality_passing2|testcase",
          "BetaSuite|testsuite",
          "Secondary|multitest",
          "GammaSuite|testsuite",
        },
        "status": "failed",
        "status_override": null,
        "tags_index": Object {
          "colour": Array [
            "white",
          ],
          "simple": Array [
            "server",
            "client",
          ],
        },
        "timer": Object {
          "run": Object {
            "end": "2018-10-15T14:30:11.296158+00:00",
            "start": "2018-10-15T14:30:10.998071+00:00",
          },
        },
        "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
      }
    }
    selected={
      Array [
        Object {
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [
                        Object {
                          "category": "DEFAULT",
                          "description": "passing equality",
                          "first": 1,
                          "label": "==",
                          "line_no": 24,
                          "machine_time": "2018-10-15T15:30:11.010098+00:00",
                          "meta_type": "assertion",
                          "passed": true,
                          "second": 1,
                          "type": "Equal",
                          "utc_time": "2018-10-15T14:30:11.010094+00:00",
                        },
                      ],
                      "logs": Array [],
                      "name": "test_equality_passing",
                      "name_type_index": Set {
                        "test_equality_passing|testcase",
                        "AlphaSuite|testsuite",
                        "Primary|multitest",
                        "Sample Testplan|testplan",
                      },
                      "status": "passed",
                      "status_override": null,
                      "tags": Object {
                        "colour": Array [
                          "white",
                        ],
                        "simple": Array [
                          "server",
                        ],
                      },
                      "tags_index": Object {
                        "colour": Array [
                          "white",
                        ],
                        "simple": Array [
                          "server",
                        ],
                      },
                      "timer": Object {
                        "run": Object {
                          "end": "2018-10-15T14:30:11.132214+00:00",
                          "start": "2018-10-15T14:30:11.010072+00:00",
                        },
                      },
                      "type": "TestCaseReport",
                      "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                    },
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [
                        Object {
                          "category": "DEFAULT",
                          "description": "passing equality",
                          "first": 1,
                          "label": "==",
                          "line_no": 24,
                          "machine_time": "2018-10-15T15:30:11.510098+00:00",
                          "meta_type": "assertion",
                          "passed": true,
                          "second": 1,
                          "type": "Equal",
                          "utc_time": "2018-10-15T14:30:11.510094+00:00",
                        },
                      ],
                      "logs": Array [],
                      "name": "test_equality_passing2",
                      "name_type_index": Set {
                        "test_equality_passing2|testcase",
                        "AlphaSuite|testsuite",
                        "Primary|multitest",
                        "Sample Testplan|testplan",
                      },
                      "status": "failed",
                      "status_override": null,
                      "tags": Object {
                        "simple": Array [
                          "server",
                        ],
                      },
                      "tags_index": Object {
                        "simple": Array [
                          "server",
                        ],
                      },
                      "timer": Object {
                        "run": Object {
                          "end": "2018-10-15T14:30:11.632214+00:00",
                          "start": "2018-10-15T14:30:11.510072+00:00",
                        },
                      },
                      "type": "TestCaseReport",
                      "uid": "78686a4d-7b94-4ae6-ab50-d9960a7fb714",
                    },
                  ],
                  "logs": Array [],
                  "name": "AlphaSuite",
                  "name_type_index": Set {
                    "AlphaSuite|testsuite",
                    "Primary|multitest",
                    "Sample Testplan|testplan",
                    "test_equality_passing|testcase",
                    "test_equality_passing2|testcase",
                  },
                  "status": "failed",
                  "status_override": null,
                  "tags": Object {
                    "simple": Array [
                      "server",
                    ],
                  },
                  "tags_index": Object {
                    "colour": Array [
                      "white",
                    ],
                    "simple": Array [
                      "server",
                    ],
                  },
                  "timer": Object {
                    "run": Object {
                      "end": "2018-10-15T14:30:11.158224+00:00",
                      "start": "2018-10-15T14:30:11.009872+00:00",
                    },
                  },
                  "type": "TestGroupReport",
                  "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
                },
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [
                        Object {
                          "category": "DEFAULT",
                          "description": "passing equality",
                          "first": 1,
                          "label": "==",
                          "line_no": 24,
                          "machine_time": "2018-10-15T15:30:11.010098+00:00",
                          "meta_type": "assertion",
                          "passed": true,
                          "second": 1,
                          "type": "Equal",
                          "utc_time": "2018-10-15T14:30:11.010094+00:00",
                        },
                      ],
                      "logs": Array [],
                      "name": "test_equality_passing",
                      "name_type_index": Set {
                        "test_equality_passing|testcase",
                        "BetaSuite|testsuite",
                        "Primary|multitest",
                        "Sample Testplan|testplan",
                      },
                      "status": "passed",
                      "status_override": null,
                      "tags": Object {
                        "simple": Array [
                          "server",
                          "client",
                        ],
                      },
                      "tags_index": Object {
                        "simple": Array [
                          "server",
                          "client",
                        ],
                      },
                      "timer": Object {
                        "run": Object {
                          "end": "2018-10-15T14:30:11.132214+00:00",
                          "start": "2018-10-15T14:30:11.010072+00:00",
                        },
                      },
                      "type": "TestCaseReport",
                      "uid": "8865a23d-1823-4c8d-ab37-58d24fc8ac05",
                    },
                  ],
                  "logs": Array [],
                  "name": "BetaSuite",
                  "name_type_index": Set {
                    "BetaSuite|testsuite",
                    "Primary|multitest",
                    "Sample Testplan|testplan",
                    "test_equality_passing|testcase",
                  },
                  "status": "passed",
                  "status_override": null,
                  "tags": Object {
                    "simple": Array [
                      "server",
                      "client",
                    ],
                  },
                  "tags_index": Object {
                    "simple": Array [
                      "server",
                      "client",
                    ],
                  },
                  "timer": Object {
                    "run": Object {
                      "end": "2018-10-15T14:30:11.158224+00:00",
                      "start": "2018-10-15T14:30:11.009872+00:00",
                    },
                  },
                  "type": "TestGroupReport",
                  "uid": "6fc5c008-4d1a-454e-80b6-74bdc9bca49e",
                },
              ],
              "logs": Array [],
              "name": "Primary",
              "name_type_index": Set {
                "Primary|multitest",
                "Sample Testplan|testplan",
                "AlphaSuite|testsuite",
                "test_equality_passing|testcase",
                "test_equality_passing2|testcase",
                "BetaSuite|testsuite",
              },
              "status": "failed",
              "status_override": null,
              "tags": Object {
                "simple": Array [
                  "server",
                ],
              },
              "tags_index": Object {
                "colour": Array [
                  "white",
                ],
                "simple": Array [
                  "server",
                  "client",
                ],
              },
              "timer": Object {
                "run": Object {
                  "end": "2018-10-15T14:30:11.159661+00:00",
                  "start": "2018-10-15T14:30:11.009705+00:00",
                },
              },
              "type": "TestGroupReport",
              "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
            },
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [
                        Object {
                          "category": "DEFAULT",
                          "description": "passing equality",
                          "first": 1,
                          "label": "==",
                          "line_no": 24,
                          "machine_time": "2018-10-15T15:30:12.010098+00:00",
                          "meta_type": "assertion",
                          "passed": true,
                          "second": 1,
                          "type": "Equal",
                          "utc_time": "2018-10-15T14:30:12.010094+00:00",
                        },
                      ],
                      "logs": Array [],
                      "name": "test_equality_passing",
                      "name_type_index": Set {
                        "test_equality_passing|testcase",
                        "GammaSuite|testsuite",
                        "Secondary|multitest",
                        "Sample Testplan|testplan",
                      },
                      "status": "passed",
                      "status_override": null,
                      "tags": Object {},
                      "tags_index": Object {},
                      "timer": Object {
                        "run": Object {
                          "end": "2018-10-15T14:30:12.132214+00:00",
                          "start": "2018-10-15T14:30:12.010072+00:00",
                        },
                      },
                      "type": "TestCaseReport",
                      "uid": "f73bd6ea-d378-437b-a5db-00d9e427f36a",
                    },
                  ],
                  "logs": Array [],
                  "name": "GammaSuite",
                  "name_type_index": Set {
                    "GammaSuite|testsuite",
                    "Secondary|multitest",
                    "Sample Testplan|testplan",
                    "test_equality_passing|testcase",
                  },
                  "status": "passed",
                  "status_override": null,
                  "tags": Object {},
                  "tags_index": Object {},
                  "timer": Object {
                    "run": Object {
                      "end": "2018-10-15T14:30:12.158224+00:00",
                      "start": "2018-10-15T14:30:12.009872+00:00",
                    },
                  },
                  "type": "TestGroupReport",
                  "uid": "08d4c671-d55d-49d4-96ba-dc654d12be26",
                },
              ],
              "logs": Array [],
              "name": "Secondary",
              "name_type_index": Set {
                "Secondary|multitest",
                "Sample Testplan|testplan",
                "GammaSuite|testsuite",
                "test_equality_passing|testcase",
              },
              "status": "passed",
              "status_override": null,
              "tags": Object {},
              "tags_index": Object {},
              "timer": Object {
                "run": Object {
                  "end": "2018-10-15T14:30:12.159661+00:00",
                  "start": "2018-10-15T14:30:12.009705+00:00",
                },
              },
              "type": "TestGroupReport",
              "uid": "8c3c7e6b-48e8-40cd-86db-8c8aed2592c8",
            },
          ],
          "meta": Object {},
          "name": "Sample Testplan",
          "name_type_index": Set {
            "Sample Testplan|testplan",
            "Primary|multitest",
            "AlphaSuite|testsuite",
            "test_equality_passing|testcase",
            "test_equality_passing2|testcase",
            "BetaSuite|testsuite",
            "Secondary|multitest",
            "GammaSuite|testsuite",
          },
          "status": "failed",
          "status_override": null,
          "tags_index": Object {
            "colour": Array [
              "white",
            ],
            "simple": Array [
              "server",
              "client",
            ],
          },
          "timer": Object {
            "run": Object {
              "end": "2018-10-15T14:30:11.296158+00:00",
              "start": "2018-10-15T14:30:10.998071+00:00",
            },
          },
          "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
        },
      ]
    }
  />
  <Message
    left={22}
    message="Please select an entry."
  />
</div>
`;

exports[`BatchReport loads a simple report and autoselects entries 1`] = `
<div
  className="batchReport_3hmsj"
>
  <Toolbar
    handleNavFilter={[Function]}
    report={
      Object {
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "name_type_index": Set {
                      "test_equality_passing|testcase",
                      "AlphaSuite|testsuite",
                      "Primary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "colour": Array [
                        "white",
                      ],
                      "simple": Array [
                        "server",
                      ],
                    },
                    "tags_index": Object {
                      "colour": Array [
                        "white",
                      ],
                      "simple": Array [
                        "server",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                  },
                ],
                "logs": Array [],
                "name": "AlphaSuite",
                "name_type_index": Set {
                  "AlphaSuite|testsuite",
                  "Primary|multitest",
                  "Sample Testplan|testplan",
                  "test_equality_passing|testcase",
                },
                "status": "failed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                  ],
                },
                "tags_index": Object {
                  "colour": Array [
                    "white",
                  ],
                  "simple": Array [
                    "server",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
              },
            ],
            "logs": Array [],
            "name": "Primary",
            "name_type_index": Set {
              "Primary|multitest",
              "Sample Testplan|testplan",
              "AlphaSuite|testsuite",
              "test_equality_passing|testcase",
            },
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "tags_index": Object {
              "colour": Array [
                "white",
              ],
              "simple": Array [
                "server",
              ],
            },
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:11.159661+00:00",
                "start": "2018-10-15T14:30:11.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
          },
        ],
        "meta": Object {},
        "name": "Sample Testplan",
        "name_type_index": Set {
          "Sample Testplan|testplan",
          "Primary|multitest",
          "AlphaSuite|testsuite",
          "test_equality_passing|testcase",
        },
        "status": "failed",
        "status_override": null,
        "tags_index": Object {
          "colour": Array [
            "white",
          ],
          "simple": Array [
            "server",
          ],
        },
        "timer": Object {
          "run": Object {
            "end": "2018-10-15T14:30:11.296158+00:00",
            "start": "2018-10-15T14:30:10.998071+00:00",
          },
        },
        "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
      }
    }
    status="failed"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <Nav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    report={
      Object {
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "name_type_index": Set {
                      "test_equality_passing|testcase",
                      "AlphaSuite|testsuite",
                      "Primary|multitest",
                      "Sample Testplan|testplan",
                    },
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "colour": Array [
                        "white",
                      ],
                      "simple": Array [
                        "server",
                      ],
                    },
                    "tags_index": Object {
                      "colour": Array [
                        "white",
                      ],
                      "simple": Array [
                        "server",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                  },
                ],
                "logs": Array [],
                "name": "AlphaSuite",
                "name_type_index": Set {
                  "AlphaSuite|testsuite",
                  "Primary|multitest",
                  "Sample Testplan|testplan",
                  "test_equality_passing|testcase",
                },
                "status": "failed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                  ],
                },
                "tags_index": Object {
                  "colour": Array [
                    "white",
                  ],
                  "simple": Array [
                    "server",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
              },
            ],
            "logs": Array [],
            "name": "Primary",
            "name_type_index": Set {
              "Primary|multitest",
              "Sample Testplan|testplan",
              "AlphaSuite|testsuite",
              "test_equality_passing|testcase",
            },
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "tags_index": Object {
              "colour": Array [
                "white",
              ],
              "simple": Array [
                "server",
              ],
            },
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:11.159661+00:00",
                "start": "2018-10-15T14:30:11.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
          },
        ],
        "meta": Object {},
        "name": "Sample Testplan",
        "name_type_index": Set {
          "Sample Testplan|testplan",
          "Primary|multitest",
          "AlphaSuite|testsuite",
          "test_equality_passing|testcase",
        },
        "status": "failed",
        "status_override": null,
        "tags_index": Object {
          "colour": Array [
            "white",
          ],
          "simple": Array [
            "server",
          ],
        },
        "timer": Object {
          "run": Object {
            "end": "2018-10-15T14:30:11.296158+00:00",
            "start": "2018-10-15T14:30:10.998071+00:00",
          },
        },
        "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
      }
    }
    selected={
      Array [
        Object {
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [
                        Object {
                          "category": "DEFAULT",
                          "description": "passing equality",
                          "first": 1,
                          "label": "==",
                          "line_no": 24,
                          "machine_time": "2018-10-15T15:30:11.010098+00:00",
                          "meta_type": "assertion",
                          "passed": true,
                          "second": 1,
                          "type": "Equal",
                          "utc_time": "2018-10-15T14:30:11.010094+00:00",
                        },
                      ],
                      "logs": Array [],
                      "name": "test_equality_passing",
                      "name_type_index": Set {
                        "test_equality_passing|testcase",
                        "AlphaSuite|testsuite",
                        "Primary|multitest",
                        "Sample Testplan|testplan",
                      },
                      "status": "passed",
                      "status_override": null,
                      "tags": Object {
                        "colour": Array [
                          "white",
                        ],
                        "simple": Array [
                          "server",
                        ],
                      },
                      "tags_index": Object {
                        "colour": Array [
                          "white",
                        ],
                        "simple": Array [
                          "server",
                        ],
                      },
                      "timer": Object {
                        "run": Object {
                          "end": "2018-10-15T14:30:11.132214+00:00",
                          "start": "2018-10-15T14:30:11.010072+00:00",
                        },
                      },
                      "type": "TestCaseReport",
                      "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                    },
                  ],
                  "logs": Array [],
                  "name": "AlphaSuite",
                  "name_type_index": Set {
                    "AlphaSuite|testsuite",
                    "Primary|multitest",
                    "Sample Testplan|testplan",
                    "test_equality_passing|testcase",
                  },
                  "status": "failed",
                  "status_override": null,
                  "tags": Object {
                    "simple": Array [
                      "server",
                    ],
                  },
                  "tags_index": Object {
                    "colour": Array [
                      "white",
                    ],
                    "simple": Array [
                      "server",
                    ],
                  },
                  "timer": Object {
                    "run": Object {
                      "end": "2018-10-15T14:30:11.158224+00:00",
                      "start": "2018-10-15T14:30:11.009872+00:00",
                    },
                  },
                  "type": "TestGroupReport",
                  "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
                },
              ],
              "logs": Array [],
              "name": "Primary",
              "name_type_index": Set {
                "Primary|multitest",
                "Sample Testplan|testplan",
                "AlphaSuite|testsuite",
                "test_equality_passing|testcase",
              },
              "status": "failed",
              "status_override": null,
              "tags": Object {
                "simple": Array [
                  "server",
                ],
              },
              "tags_index": Object {
                "colour": Array [
                  "white",
                ],
                "simple": Array [
                  "server",
                ],
              },
              "timer": Object {
                "run": Object {
                  "end": "2018-10-15T14:30:11.159661+00:00",
                  "start": "2018-10-15T14:30:11.009705+00:00",
                },
              },
              "type": "TestGroupReport",
              "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
            },
          ],
          "meta": Object {},
          "name": "Sample Testplan",
          "name_type_index": Set {
            "Sample Testplan|testplan",
            "Primary|multitest",
            "AlphaSuite|testsuite",
            "test_equality_passing|testcase",
          },
          "status": "failed",
          "status_override": null,
          "tags_index": Object {
            "colour": Array [
              "white",
            ],
            "simple": Array [
              "server",
            ],
          },
          "timer": Object {
            "run": Object {
              "end": "2018-10-15T14:30:11.296158+00:00",
              "start": "2018-10-15T14:30:10.998071+00:00",
            },
          },
          "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
        },
        Object {
          "category": "multitest",
          "description": null,
          "entries": Array [
            Object {
              "category": "testsuite",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testcase",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "DEFAULT",
                      "description": "passing equality",
                      "first": 1,
                      "label": "==",
                      "line_no": 24,
                      "machine_time": "2018-10-15T15:30:11.010098+00:00",
                      "meta_type": "assertion",
                      "passed": true,
                      "second": 1,
                      "type": "Equal",
                      "utc_time": "2018-10-15T14:30:11.010094+00:00",
                    },
                  ],
                  "logs": Array [],
                  "name": "test_equality_passing",
                  "name_type_index": Set {
                    "test_equality_passing|testcase",
                    "AlphaSuite|testsuite",
                    "Primary|multitest",
                    "Sample Testplan|testplan",
                  },
                  "status": "passed",
                  "status_override": null,
                  "tags": Object {
                    "colour": Array [
                      "white",
                    ],
                    "simple": Array [
                      "server",
                    ],
                  },
                  "tags_index": Object {
                    "colour": Array [
                      "white",
                    ],
                    "simple": Array [
                      "server",
                    ],
                  },
                  "timer": Object {
                    "run": Object {
                      "end": "2018-10-15T14:30:11.132214+00:00",
                      "start": "2018-10-15T14:30:11.010072+00:00",
                    },
                  },
                  "type": "TestCaseReport",
                  "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                },
              ],
              "logs": Array [],
              "name": "AlphaSuite",
              "name_type_index": Set {
                "AlphaSuite|testsuite",
                "Primary|multitest",
                "Sample Testplan|testplan",
                "test_equality_passing|testcase",
              },
              "status": "failed",
              "status_override": null,
              "tags": Object {
                "simple": Array [
                  "server",
                ],
              },
              "tags_index": Object {
                "colour": Array [
                  "white",
                ],
                "simple": Array [
                  "server",
                ],
              },
              "timer": Object {
                "run": Object {
                  "end": "2018-10-15T14:30:11.158224+00:00",
                  "start": "2018-10-15T14:30:11.009872+00:00",
                },
              },
              "type": "TestGroupReport",
              "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
            },
          ],
          "logs": Array [],
          "name": "Primary",
          "name_type_index": Set {
            "Primary|multitest",
            "Sample Testplan|testplan",
            "AlphaSuite|testsuite",
            "test_equality_passing|testcase",
          },
          "status": "failed",
          "status_override": null,
          "tags": Object {
            "simple": Array [
              "server",
            ],
          },
          "tags_index": Object {
            "colour": Array [
              "white",
            ],
            "simple": Array [
              "server",
            ],
          },
          "timer": Object {
            "run": Object {
              "end": "2018-10-15T14:30:11.159661+00:00",
              "start": "2018-10-15T14:30:11.009705+00:00",
            },
          },
          "type": "TestGroupReport",
          "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
        },
        Object {
          "category": "testsuite",
          "description": null,
          "entries": Array [
            Object {
              "category": "testcase",
              "description": null,
              "entries": Array [
                Object {
                  "category": "DEFAULT",
                  "description": "passing equality",
                  "first": 1,
                  "label": "==",
                  "line_no": 24,
                  "machine_time": "2018-10-15T15:30:11.010098+00:00",
                  "meta_type": "assertion",
                  "passed": true,
                  "second": 1,
                  "type": "Equal",
                  "utc_time": "2018-10-15T14:30:11.010094+00:00",
                },
              ],
              "logs": Array [],
              "name": "test_equality_passing",
              "name_type_index": Set {
                "test_equality_passing|testcase",
                "AlphaSuite|testsuite",
                "Primary|multitest",
                "Sample Testplan|testplan",
              },
              "status": "passed",
              "status_override": null,
              "tags": Object {
                "colour": Array [
                  "white",
                ],
                "simple": Array [
                  "server",
                ],
              },
              "tags_index": Object {
                "colour": Array [
                  "white",
                ],
                "simple": Array [
                  "server",
                ],
              },
              "timer": Object {
                "run": Object {
                  "end": "2018-10-15T14:30:11.132214+00:00",
                  "start": "2018-10-15T14:30:11.010072+00:00",
                },
              },
              "type": "TestCaseReport",
              "uid": "736706ef-ba65-475d-96c5-f2855f431028",
            },
          ],
          "logs": Array [],
          "name": "AlphaSuite",
          "name_type_index": Set {
            "AlphaSuite|testsuite",
            "Primary|multitest",
            "Sample Testplan|testplan",
            "test_equality_passing|testcase",
          },
          "status": "failed",
          "status_override": null,
          "tags": Object {
            "simple": Array [
              "server",
            ],
          },
          "tags_index": Object {
            "colour": Array [
              "white",
            ],
            "simple": Array [
              "server",
            ],
          },
          "timer": Object {
            "run": Object {
              "end": "2018-10-15T14:30:11.158224+00:00",
              "start": "2018-10-15T14:30:11.009872+00:00",
            },
          },
          "type": "TestGroupReport",
          "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
        },
      ]
    }
  />
  <Message
    left={22}
    message="Please select an entry."
  />
</div>
`;

exports[`BatchReport shallow renders the correct HTML structure when report loaded 1`] = `
<div
  className="batchReport_3hmsj"
>
  <Toolbar
    handleNavFilter={[Function]}
    report={
      Object {
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "colour": Array [
                        "white",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                  },
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.510098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.510094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing2",
                    "status": "failed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.632214+00:00",
                        "start": "2018-10-15T14:30:11.510072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "78686a4d-7b94-4ae6-ab50-d9960a7fb714",
                  },
                ],
                "logs": Array [],
                "name": "AlphaSuite",
                "status": "failed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
              },
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "8865a23d-1823-4c8d-ab37-58d24fc8ac05",
                  },
                ],
                "logs": Array [],
                "name": "BetaSuite",
                "status": "passed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "client",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "6fc5c008-4d1a-454e-80b6-74bdc9bca49e",
              },
            ],
            "logs": Array [],
            "name": "Primary",
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:11.159661+00:00",
                "start": "2018-10-15T14:30:11.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
          },
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:12.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:12.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:12.132214+00:00",
                        "start": "2018-10-15T14:30:12.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "f73bd6ea-d378-437b-a5db-00d9e427f36a",
                  },
                ],
                "logs": Array [],
                "name": "GammaSuite",
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:12.158224+00:00",
                    "start": "2018-10-15T14:30:12.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "08d4c671-d55d-49d4-96ba-dc654d12be26",
              },
            ],
            "logs": Array [],
            "name": "Secondary",
            "status": "passed",
            "status_override": null,
            "tags": Object {},
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:12.159661+00:00",
                "start": "2018-10-15T14:30:12.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "8c3c7e6b-48e8-40cd-86db-8c8aed2592c8",
          },
        ],
        "meta": Object {},
        "name": "Sample Testplan",
        "status": "failed",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {
          "run": Object {
            "end": "2018-10-15T14:30:11.296158+00:00",
            "start": "2018-10-15T14:30:10.998071+00:00",
          },
        },
        "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
      }
    }
    status="failed"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <Nav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    report={
      Object {
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "colour": Array [
                        "white",
                      ],
                    },
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                  },
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.510098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.510094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing2",
                    "status": "failed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.632214+00:00",
                        "start": "2018-10-15T14:30:11.510072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "78686a4d-7b94-4ae6-ab50-d9960a7fb714",
                  },
                ],
                "logs": Array [],
                "name": "AlphaSuite",
                "status": "failed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
              },
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:11.132214+00:00",
                        "start": "2018-10-15T14:30:11.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "8865a23d-1823-4c8d-ab37-58d24fc8ac05",
                  },
                ],
                "logs": Array [],
                "name": "BetaSuite",
                "status": "passed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "client",
                  ],
                },
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:11.158224+00:00",
                    "start": "2018-10-15T14:30:11.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "6fc5c008-4d1a-454e-80b6-74bdc9bca49e",
              },
            ],
            "logs": Array [],
            "name": "Primary",
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:11.159661+00:00",
                "start": "2018-10-15T14:30:11.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
          },
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:12.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:12.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Object {
                        "end": "2018-10-15T14:30:12.132214+00:00",
                        "start": "2018-10-15T14:30:12.010072+00:00",
                      },
                    },
                    "type": "TestCaseReport",
                    "uid": "f73bd6ea-d378-437b-a5db-00d9e427f36a",
                  },
                ],
                "logs": Array [],
                "name": "GammaSuite",
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Object {
                    "end": "2018-10-15T14:30:12.158224+00:00",
                    "start": "2018-10-15T14:30:12.009872+00:00",
                  },
                },
                "type": "TestGroupReport",
                "uid": "08d4c671-d55d-49d4-96ba-dc654d12be26",
              },
            ],
            "logs": Array [],
            "name": "Secondary",
            "status": "passed",
            "status_override": null,
            "tags": Object {},
            "timer": Object {
              "run": Object {
                "end": "2018-10-15T14:30:12.159661+00:00",
                "start": "2018-10-15T14:30:12.009705+00:00",
              },
            },
            "type": "TestGroupReport",
            "uid": "8c3c7e6b-48e8-40cd-86db-8c8aed2592c8",
          },
        ],
        "meta": Object {},
        "name": "Sample Testplan",
        "status": "failed",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {
          "run": Object {
            "end": "2018-10-15T14:30:11.296158+00:00",
            "start": "2018-10-15T14:30:10.998071+00:00",
          },
        },
        "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
      }
    }
    selected={Array []}
  />
  <Message
    left={22}
    message="Please select an entry."
  />
</div>
`;
